# webProject

./: README.md  db.sqlite3  pyproject.toml
features/: delete_developer.feature  delete_product.feature  delete_publisher.feature  delete_steam_user.feature  edit_developer.feature  edit_product.feature  edit_publisher.feature  edit_steam_user.feature  register_developer.feature  register_product.feature  register_publisher.feature  register_steam_user.feature
features/steps/: authentication.py  delete_developer.py  delete_product.py  delete_publisher.py  delete_steam_user.py  edit_developer.py  edit_product.py  edit_publisher.py  edit_steam_user.py  register_developer.py  register_product.py  register_publisher.py  register_steam_user.py
static/css/: paginator.css  styles.css
steamApp/: admin.py  forms.py  models.py  tests.py  views.py
templates/: base.html  createDeveloper.html  createProduct.html  createPublisher.html  createSteamUser.html  detailed_search.html  developerDetails.html  home.html  modifyDeveloper.html  modifyProduct.html  modifyPublisher.html  modifySteamUser.html  paginator.html  productDetails.html  publisherDetails.html  search.html  showDevelopers.html  showProduct.html  showPublishers.html  showSteamUsers.html  steamUserDetails.html
templates/registration/: login.html  signup.html
webProject/: settings.py  urls.py
